update post day 2

--- a/algos/bigO/lect.ipynb
+++ b/algos/bigO/lect.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "6394f41f",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "027116d9",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "60d0bffb",
    "metadata": {},
    "outputs": [
@@ -115,17 +115,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "103 µs ± 437 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "150 ms ± 1.65 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit sum1(5000)"
+    "%timeit sum1(5000000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "832b0968",
    "metadata": {},
    "outputs": [
@@ -133,12 +133,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "61.7 ns ± 0.202 ns per loop (mean ± std. dev. of 7 runs, 10000000 loops each)\n"
+      "86.5 ns ± 1.35 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit sum2(5000)"
+    "%timeit sum2(5000000)"
    ]
   },
   {
@@ -182,9 +182,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def quadratic(n):\n",
+    "def quadratic(n): n = [1,2,3,4]\n",
     "    for n in range(n):\n",
+    "        n + 2\n",
     "        for m in range(n):\n",
+    "            m + 3\n",
     "# O(n**2)"
    ]
   },
